k8s/peste-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peste-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peste-api
  template:
    metadata:
      labels:
        app: peste-api
    spec:
      containers:
      - name: peste-api
        image: ronualdo/peste:a7cd6f0294bcccb54a8be77a5a985e2d033b58ed
        ports:
          - containerPort: 4000
