k8s/peste-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: peste-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - peste.notdev.eti.br
      secretName: letsencrypt-prod
  rules:
  - host: peste.notdev.eti.br
    http:
      paths:
      - backend:
          serviceName: peste-api-service
          servicePort: 80
